# PhotoLab-in-Qt-CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
controller/: controller.h
forms/: color_window.ui  view.ui
model/: model.cc  model.h
src/: Makefile
src/documentation/: dvi.html
src/forms/: custom_filter.ui
src/model/: model.h
src/tests/: test.cc
src/view/: color_window.cc  custom_filter.cc  view.h
test/: CMakeLists.txt  tests.cc
tests/: CMakeLists.txt
view/: color_window.cc  color_window.h  custom_filter.cc  custom_filter.h  view.cc  view.h
